// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 3:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid02fKuBRKn4Y1CX2F7FD7zDzCyMBGi8advKwDZrVR3iStbw85kgVHA98VUe67tk9v5rl",
      "name": "Joe Smith",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=7206a8&_nc_ohc=iyixs2h8VAgAX-onlf6&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfBTU6sjB-Fd4TQHCe9O0k6Vc7Bi3Segq7wzhwW5EzQvig&oe=64822438",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fKuBRKn4Y1CX2F7FD7zDzCyMBGi8advKwDZrVR3iStbw85kgVHA98VUe67tk9v5rl/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "photo": null,
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersGoing": 1,
  "usersInterested": 0,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 7:30 PM MDT",
  "hosts": [
    {
      "id": "104371842930883",
      "name": "Calgary Stampede",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t1.6435-1/37839773_2106388022729245_4382714770642436096_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=105&ccb=1-7&_nc_sid=1eb0c7&_nc_ohc=UnsQNLSyQWkAX9_Fc40&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfCQ3d5YWIHDNz2Wz_nQOqoctZDo4eKrJIVcAphXOtxPqA&oe=648243B8",
      },
      "type": "Page",
      "url": "https://www.facebook.com/calgarystampede/",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=101&ccb=1-7&_nc_sid=c6021c&_nc_ohc=G3VD6rlXaX8AX87Ot3P&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfBpXqtSVEacjfW_JPnIHqTxVTbVrrfB6bLE1AB5gA8caQ&oe=645FCF82",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "426321674227135",
      "name": "Scotiabank Saddledome",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=109&ccb=1-7&_nc_sid=1eb0c7&_nc_ohc=qMOydCilHWgAX8hkqid&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfC7ySPSWeznlfZF2Wocem0WwXWS75Bc7UN-d6D50V7k_g&oe=6460ABCB",
      },
      "type": "Page",
      "url": "https://www.facebook.com/scotiabanksaddledome/",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/318412673_725328142295041_3629940500281564098_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=102&ccb=1-7&_nc_sid=c6021c&_nc_ohc=DXpuYE4twBYAX9-c3IP&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfCZRpxfWuWQvKLGqzu9To7OWEzSrVKF-cH9kO1Rni0Oqg&oe=646047A3",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": "CA",
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://www.facebook.com/scotiabanksaddledome/",
  },
  "name": "Pitbull",
  "onlineDetails": null,
  "photo": {
    "id": "10160954790708641",
    "url": "https://www.facebook.com/Ticketmaster/photos/gm.602005851971871/10160954790708641/",
  },
  "startTimestamp": 1688779800,
  "ticketUrl": "https://ticketmaster.evyy.net/c/253158/264167/4272?u=https%3A%2F%2Fwww.ticketmaster.ca%2Fpitbull-calgary-alberta-07-07-2023%2Fevent%2F11005E718BB52147",
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersGoing": 155,
  "usersInterested": 1203,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 11:15 AM – 12:30 PM UTC-06",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Calgary",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/308800346_490298226469886_3396126836502450064_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=c6021c&_nc_ohc=vAAAjTdbWDEAX8h42Bj&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfBClwekjDyhq0yyFM74wFTIMkGIH1kS9lqIvMPvxBXG4Q&oe=645EE466",
      },
      "type": "User",
      "url": "https://www.facebook.com/faccalgary",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": "CA",
    "description": "Building lives that honour God...all for Jesus! 
Official Facebook Page for First Alliance Church, Calgary, AB
Three campus locations: 
FAC Deerfoot: 12345 40 Street SE
FAC Southwest: 16520 24 Street SW
FAC Online: https://live.faccalgary.com",
    "id": "118309434891614",
    "name": "FAC Calgary",
    "type": "PLACE",
    "url": "https://facebook.com/faccalgary",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "photo": {
    "id": "595982989234742",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersGoing": 8,
  "usersInterested": 12,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 9:00 AM – 11:30 AM UTC-06",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": "CA",
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "photo": {
    "id": "10167524860335261",
    "url": "https://www.facebook.com/EventbriteforOrganizers/photos/gm.252144523936238/10167524860335261/",
  },
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersGoing": 0,
  "usersInterested": 0,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 10:00 AM – 6:00 PM UTC-06",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/343412725_1217737712204297_6274770509266232269_n.jpg?stp=c2.1.38.38a_cp0_dst-jpg_p40x40&_nc_cat=111&ccb=1-7&_nc_sid=c6021c&_nc_ohc=jupFGNnj1E0AX8MaNU6&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfDpSslJkNJpU5O4VIs3YdFP5esAKYhg0j1H1uq6FZbTAg&oe=6460ABF4",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": "CA",
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "photo": {
    "id": "749222690104751",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersGoing": 269,
  "usersInterested": 3449,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 11:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid02fKuBRKn4Y1CX2F7FD7zDzCyMBGi8advKwDZrVR3iStbw85kgVHA98VUe67tk9v5rl",
      "name": "Joe Smith",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=7206a8&_nc_ohc=iyixs2h8VAgAX-onlf6&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfBTU6sjB-Fd4TQHCe9O0k6Vc7Bi3Segq7wzhwW5EzQvig&oe=64822438",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fKuBRKn4Y1CX2F7FD7zDzCyMBGi8advKwDZrVR3iStbw85kgVHA98VUe67tk9v5rl/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "photo": null,
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersGoing": 1,
  "usersInterested": 0,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 10:00 PM – 2:00 AM UTC-06",
  "hosts": [
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=c6021c&_nc_ohc=KpFVO6-7QdIAX9epCTc&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfA0ITIKEpSVZxY14PDJoM6lBEL9oBts7a1zhuzqQmL7ZA&oe=645EBBE7",
      },
      "type": "User",
      "url": "https://www.facebook.com/thedarkeighties",
    },
    {
      "id": "108472030566533",
      "name": "12XU",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/306137485_200591368978239_9209675654430194583_n.png?stp=cp0_dst-png_p40x40&_nc_cat=110&ccb=1-7&_nc_sid=1eb0c7&_nc_ohc=QbuH2CfyzisAX-ZWOQZ&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfD7rTP431665-xm-h3rs2SUrrsutjv4DIYGDakd0T245Q&oe=6460810B",
      },
      "type": "Page",
      "url": "https://www.facebook.com/12XUevents/",
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": "CA",
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "photo": {
    "id": "621131586693637",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersGoing": 47,
  "usersInterested": 377,
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "description": "All Elite Wrestling (AEW) makes its Calgary, Alberta debut July 15th, 2023 for #AEWHouseRules from the Calgary Stampede!

🎟 Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 9:30 PM EDT",
  "hosts": [
    {
      "id": "276076433043811",
      "name": "All Elite Wrestling",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/335675194_2899374420207257_9101454388622372305_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=1eb0c7&_nc_ohc=HxefLInPv_IAX_xQaBx&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfAIu1wnhwGLcfYnXLq0e0_Wc96KfDuvL8FIobDSkdBQXQ&oe=6460A8FB",
      },
      "type": "Page",
      "url": "https://www.facebook.com/AEW/",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=101&ccb=1-7&_nc_sid=c6021c&_nc_ohc=G3VD6rlXaX8AX87Ot3P&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfBpXqtSVEacjfW_JPnIHqTxVTbVrrfB6bLE1AB5gA8caQ&oe=645FCF82",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": "CA",
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our western heritage, cultures and community spirit. Join us July 7-16, 2023.",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://www.facebook.com/calgarystampede/",
  },
  "name": "All Elite Wrestling (AEW) House Rules Calgary, Alberta Debut!",
  "onlineDetails": null,
  "photo": {
    "id": "1243141893003922",
    "url": "https://www.facebook.com/AEW/photos/gm.947600896668363/1243141893003922/",
  },
  "startTimestamp": 1689471000,
  "ticketUrl": "https://aewevents.com/AEWCalgaryDebut",
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersGoing": 121,
  "usersInterested": 397,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 4:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid02fKuBRKn4Y1CX2F7FD7zDzCyMBGi8advKwDZrVR3iStbw85kgVHA98VUe67tk9v5rl",
      "name": "Joe Smith",
      "photo": {
        "url": "https://scontent.fyyc7-1.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=7206a8&_nc_ohc=iyixs2h8VAgAX-onlf6&_nc_ht=scontent.fyyc7-1.fna&oh=00_AfBTU6sjB-Fd4TQHCe9O0k6Vc7Bi3Segq7wzhwW5EzQvig&oe=64822438",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fKuBRKn4Y1CX2F7FD7zDzCyMBGi8advKwDZrVR3iStbw85kgVHA98VUe67tk9v5rl/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "photo": null,
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersGoing": 1,
  "usersInterested": 0,
}
`;
